desempeno/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: travelhub
  labels:
    app.kubernetes.io/part-of: travelhub
