desempeno/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travelhub-ingress
  namespace: travelhub
  annotations:
    # --- TLS: cifrado en transito (ASR-01 requiere TLS 1.2+) ---
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    # --- Rate Limiting: controlar demanda de recursos ---
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/limit-connections: "50"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "5"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - travelhub.local
      secretName: travelhub-tls
  rules:
    - host: travelhub.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reservations-service
                port:
                  number: 80
